DM: More code cleanup
Remove unneeded redraws.
Move things around for better readability.
Use some macros.
Delete a few pieces of unnecessary code.

--- a/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
@@ -39,10 +39,10 @@
             placement=leader
             facing=sw
         [/unit]
-        {NAMED_UNIT 2 (Great Mage)  8   9 "First Oracle" (_"First Oracle") (ai_special,facing,profile=guardian,se,portraits/oracle1.png)}
-        {NAMED_UNIT 2 (Great Mage) 10  11 "Second Oracle" (_"Second Oracle")  (ai_special,facing,profile=guardian,sw,portraits/oracle2.png)}
-        {NAMED_UNIT 2 (Great Mage)  8  13 "Third Oracle" (_"Third Oracle")  (ai_special,facing,profile=guardian,nw,portraits/oracle3.png)}
-        {NAMED_UNIT 2 (Great Mage)  6  11 "Fourth Oracle" (_"Fourth Oracle")  (ai_special,facing,profile=guardian,ne,portraits/oracle4.png)}
+        {NAMED_UNIT 2 (Great Mage)  8   9 "First Oracle"  (_"First Oracle")  (profile=portraits/oracle1.png)} {FACING se}
+        {NAMED_UNIT 2 (Great Mage) 10  11 "Second Oracle" (_"Second Oracle") (profile=portraits/oracle2.png)} {FACING sw}
+        {NAMED_UNIT 2 (Great Mage)  8  13 "Third Oracle"  (_"Third Oracle")  (profile=portraits/oracle3.png)} {FACING nw}
+        {NAMED_UNIT 2 (Great Mage)  6  11 "Fourth Oracle" (_"Fourth Oracle") (profile=portraits/oracle4.png)} {FACING ne}
     [/side]
 
     [story]
@@ -84,18 +84,14 @@
             speaker=Marshal
             message = _ "Come, O aspirant. The Oracles await you."
         [/message]
-
         # Delfador's entrance
-        [redraw][/redraw]
         [delay]
             time=500
         [/delay]
         {MOVE_UNIT id=Delfador 8 11}
-        [redraw][/redraw]
         [delay]
             time=500
         [/delay]
-
         [message]
             speaker=narrator
             message = _ "... thorum restro targa thorum..."
@@ -142,7 +138,6 @@
             speaker=Marshal
             message = _ "DELFADOR, open your eyes. And open them again!"
         [/message]
-
         [message]
             speaker=Delfador
             message = _ ". ."
@@ -183,30 +178,23 @@
             speaker=Marshal
             message = _ "Your name journey begins. Methor will lead you from this place."
         [/message]
-
         # Methor’s entrance
-        [redraw][/redraw]
         [delay]
             time=500
         [/delay]
         {MOVE_UNIT id=Methor 9 10}
-        [redraw][/redraw]
         [delay]
             time=500
         [/delay]
-
         # wmllint: recognize Methor
         [message]
             speaker=Methor
             message = _ "But I will not see you to its end, for that is yours alone."
         [/message]
-
         {MODIFY_UNIT id=Delfador facing ne}
-        [redraw][/redraw]
         [delay]
             time=250
         [/delay]
-
         [message]
             speaker=Methor
             message = _ "Dangers and trials await us. When you have truly claimed the name you have been given, I will depart."
@@ -215,7 +203,6 @@
             speaker=Delfador
             message=_"I am ready."
         [/message]
-
         # Using separate tags to ensure Methor moves first
         [move_unit]
             id=Methor
