--- a/data/campaigns/Delfadors_Memoirs/scenarios/03_The_Road_to_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/03_The_Road_to_Weldyn.cfg
@@ -58,18 +58,9 @@
         [/ai]
     [/side]
 
-    [label]
-        x,y=9,4
-        text=_"The Great Valley"
-    [/label]
-    [label]
-        x,y=6,16
-        text=_"Fort Brell"  # wmllint: no spellcheck
-    [/label]
-    [label]
-        x,y=21,17
-        text=_"Fort Miryen" # wmllint: no spellcheck
-    [/label]
+    {SET_LABEL  9  4 ( _"The Great Valley" )}
+    {SET_LABEL  6 16 ( _"Fort Brell" )} # wmllint: no spellcheck
+    {SET_LABEL 21 17 ( _"Fort Miryen" )} # wmllint: no spellcheck
 
     [event]
         name=prestart
@@ -93,9 +84,6 @@
         [/objectives]
     [/event]
 
-    #############################
-    # starting dialog
-    #############################
     [event]
         name=start
         {MODIFY_UNIT (id=Delfador) facing sw}
@@ -139,9 +127,7 @@
         [/message]
     [/event]
 
-    #############################
     # bowmen carp at orcs
-    #############################
     [event]
         name=attack
         [filter]
@@ -153,9 +139,7 @@
         [/message]
     [/event]
 
-    #############################
     # warn player that orcs are more dangerous at night
-    #############################
     [event]
         name=turn 4
         [role]
@@ -170,9 +154,6 @@
         [/message]
     [/event]
 
-    #############################
-    # closing dialog
-    #############################
     [event]
         name=victory
         [role]
