--- a/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
@@ -5,7 +5,7 @@
     {MEMOIRS_MAP 05_Council_in_Weldyn.map}
     next_scenario=06_Swamps_of_Illuven
     theme=Cutscene_Minimal
-    {DEFAULT_SCHEDULE}
+    {MORNING}
 
     {SCENARIO_MUSIC loyalists.ogg} # No story part, so no intro music
 
@@ -35,6 +35,19 @@
         {UNIT 2 (Royal Guard) 29 18 (facing=ne)}
         {UNIT 2 (Royal Guard) 24 22 (facing=sw)}
         {UNIT 2 (Royal Guard) 30 21 (facing=se)}
+        # council already present
+        [unit]
+            {LEOLLYN}
+            x,y=27,21
+            facing=ne
+        [/unit]
+        [unit]
+            id=Gurcyn
+            name=_ "Gurcyn"
+            type=Cavalryman
+            x,y=25,20
+            facing=se
+        [/unit]
     [/side]
 
     [event]
@@ -43,31 +56,12 @@
         [scroll_to_unit]
             id=Delfador
         [/scroll_to_unit]
-
-        [unit]
-            side=2
-            {LEOLLYN}
-            x,y=27,21
-            facing=ne
-        [/unit]
-        [unit]
-            side=2
-            id=Gurcyn
-            name=_ "Gurcyn"
-            type=Cavalryman
-            x,y=25,20
-            facing=se
-        [/unit]
-
         [message]
             speaker=narrator
             message=_"Delfador and Leollyn met no more opposition in returning to Weldyn. As they entered the city, Delfador was amazed by its size, its grand walls and impressive citadel. After a night’s rest, Leollyn invited him to attend a meeting with the king himself. Garard, it seemed, was anxious to hear news from the borders of Wesnoth."
             image=wesnoth-icon.png
         [/message]
-
-        [redraw]
-        [/redraw]
-
+        # Lionel's entrance
         [unit]
             side=2
             {LIONEL}
@@ -76,7 +70,6 @@
         {MOVE_UNIT (id=Lionel) 26 19}
         {MODIFY_UNIT (id=Lionel) facing se}
         # wmllint: recognize Lionel
-
         [message]
             speaker=Garard II
             message=_"Ah, now the last of my council is here. Lionel, what tidings from the north?"
@@ -105,16 +98,13 @@
             speaker=Garard II
             message=_"Ah, young Delfador... you speak well, and Leollyn has already told me of your bravery. I accept your offer of service with gratitude, but this is a task for warriors, not magic-makers. You shall stay here with Leollyn and be Leollyn’s right hand as he is mine."
         [/message]
-
         {MOVE_UNIT (id=Garard II) 24 14}
         [kill]
             id=Garard II
         [/kill]
-
         [scroll_to_unit]
             id=Delfador
         [/scroll_to_unit]
-
         #		[message]
         #		speaker=Leollyn
         #		message=_"It is a pity King Garard did not accept your offer to ride with him, Delfador. More than swords and arrows will be needed to return peace to the kingdom. I am troubled by the news that the elves fear to be involved."
@@ -143,6 +133,7 @@
             speaker=Leollyn
             message=_"Then you shall! Lionel and his men will accompany you, for you will need more than magic for protection on the road... especially where you’ll be going, into the wild country north of Tath. It is a chancy place at the best of times, and orcs may already be raiding south of the Ford."
         [/message]
+        {MODIFY_UNIT id=Lionel side 1}
 
         [endlevel]
             result=victory
@@ -151,11 +142,5 @@
             carryover_percentage=100
             carryover_report=no
         [/endlevel]
-    [/event]
-
-    [event]
-        name=victory
-
-        {MODIFY_UNIT id=Lionel side 1}
     [/event]
 [/scenario]
