--- a/data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg
@@ -5,6 +5,7 @@
     {MEMOIRS_MAP 06_The_Swamps_of_Illuven.map}
     next_scenario=07_Night_in_the_Swamp
     turns=28
+    victory_when_enemies_defeated=no
     {DEFAULT_SCHEDULE}
 
     {SCENARIO_MUSIC underground.ogg}    # No story part, so no intro music
@@ -74,15 +75,11 @@
     [/side]
     {STARTING_VILLAGES 3 4}
 
-    victory_when_enemies_defeated=no
-    {MEMOIRS_VICTORY_POSITION 38 3 yes}
-
     # reward for the player who defeats Garrath without paying him
-    [item]
-        x=4
-        y=3
-        image=items/chest-plain-closed.png
-    [/item]
+    {PLACE_IMAGE items/chest-plain-closed.png 4 3}
+
+    # location of the signpost
+    {MEMOIRS_VICTORY_POSITION 38 3 yes}
 
     [event]
         name=prestart
@@ -151,12 +148,7 @@
                         side=2
                     [/kill]
                     # take his gold too
-                    [remove_item]
-                        x=4
-                        y=3
-                    [/remove_item]
-                    [redraw]
-                    [/redraw]
+                    {REMOVE_IMAGE 4 3}
                     [delay]
                         time=500
                     [/delay]
@@ -194,8 +186,7 @@
                     [event]
                         name=moveto
                         [filter]
-                            x=4
-                            y=3
+                            x,y=4,3
                             side=1
                         [/filter]
 
