--- a/data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg
@@ -127,7 +127,7 @@
         [/objectives]
     [/event]
 
-    ### give the Woses a boost when their leader is first attacked
+    # give the Woses a boost when their leader is first attacked
     [event]
         name=attack
         first_time_only=yes
@@ -178,7 +178,6 @@
             x=22,24,23,23
             y=10,10,12,11
         [/filter]
-
         [message]
             speaker=Delfador
             message=_"Ur-Thorodor, listen to me! We are not here to take your island. If you will let just me remain here, then I promise you, on behalf of King Garard, that no Wesnothian will set foot on your island without your permission again. As a token of good faith, I command my army to return to the mainland."
@@ -191,12 +190,10 @@
             speaker=Delfador
             message=_"It’s the only way! Lionel, lead our soldiers back to the mainland. I will rejoin you when I have carried out my mission, and determined what is amiss in the world of the dead."
         [/message]
-
         [message]
             speaker=Ur-Thorodor
             message=_"I see I had misjudged you, human. You are not like those who came before. I accept your offer!"
         [/message]
-
         [endlevel]
             result=victory
             carryover_report=no
@@ -208,21 +205,14 @@
         name=victory
 
         {SAVE_WESNOTH_VETERANS}
-
         [kill]
             side=2
         [/kill]
 
-        [redraw][/redraw]
-
-        [scroll_to]
-            x,y=23,11
-        [/scroll_to]
-
+        {SCROLL_TO 23 11}
         [delay]
             time=1000
         [/delay]
-
         [heal_unit]
             [filter]
                 id=Delfador
@@ -235,7 +225,6 @@
         [/heal_unit]
         {MOVE_UNIT (id=Delfador) 23 11}
         {MODIFY_UNIT (id=Delfador) facing sw}
-
         [delay]
             time=500
         [/delay]
@@ -247,7 +236,6 @@
 But as Delfador’s meditation deepened, and the woses sank into their timeless dreams of earth and trees, something else stirred on the island — for a few orcish scouts had indeed crossed the Ford of Abez..."
             image=wesnoth-icon.png
         [/message]
-
         [message]
             speaker=Delfador
             message=_"Ommmmmmm..." # wmllint: no spellcheck
@@ -256,7 +244,6 @@ But as Delfador’s meditation deepened, and the woses sank into their timeless 
         [delay]
             time=800
         [/delay]
-
         [move_unit_fake]
             type=Goblin Knight
             side=3
@@ -264,7 +251,6 @@ But as Delfador’s meditation deepened, and the woses sank into their timeless 
             y=8,9,9,10,10,11
         [/move_unit_fake]
         {NAMED_UNIT 3 (Goblin Knight) 24 11 Gurbash _"Gurbash" (facing=sw)}
-
         [move_unit_fake]
             type=Orcish Warrior
             side=3
@@ -273,19 +259,14 @@ But as Delfador’s meditation deepened, and the woses sank into their timeless 
         [/move_unit_fake]
         {NAMED_UNIT 3 (Orcish Warrior) 23 10 Pruark _"Pruark" (facing=sw)}
 
-        [redraw]
-        [/redraw]
         [delay]
             time=800
         [/delay]
-
         [message]
-            side=3
             speaker=Pruark
             message=_"A human mage... is it dead?"
         [/message]
         [message]
-            side=3
             speaker=Gurbash
             message=_"Easy to find out... thump it and see if it wakes up!"
         [/message]
@@ -294,27 +275,15 @@ But as Delfador’s meditation deepened, and the woses sank into their timeless 
             message=_"<i>Thump</i>!"
             image=wesnoth-icon.png
         [/message]
-        [color_adjust]
-            red=-32
-            green=-32
-            blue=-32
-        [/color_adjust]
+        {COLOR_ADJUST -32 -32 -32}
         [delay]
             time=250
         [/delay]
-        [color_adjust]
-            red=-64
-            green=-64
-            blue=-64
-        [/color_adjust]
+        {COLOR_ADJUST -64 -64 -64}
         [delay]
             time=250
         [/delay]
-        [color_adjust]
-            red=-128
-            green=-128
-            blue=-128
-        [/color_adjust]
+        {COLOR_ADJUST -128 -128 -128}
         [delay]
             time=250
         [/delay]
