--- a/data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg
@@ -60,6 +60,7 @@
             [/goal]
         [/ai]
     [/side]
+    {STARTING_VILLAGES 2 10}
 
     [side]
         side=3
@@ -129,12 +130,7 @@
             [/note]
         [/objectives]
 
-        [item]
-            x=15
-            y=1
-            image=scenery/signpost.png
-        [/item]
-
+        {PLACE_IMAGE scenery/signpost.png 15 1}
         # Don't let Delfador step on the staff before meeting the guardian
         [terrain]
             x,y=3,7
@@ -142,6 +138,9 @@
             layer=overlay
         [/terrain]
     [/event]
+
+    {MEMOIRS_SECRET_PASSAGE  32 5  2 8}
+    {MEMOIRS_ITEM_STAFF 3 7}
 
     [event]
         name=start
@@ -159,11 +158,6 @@
             side=1
         [/set_recruit]
     [/event]
-
-    {STARTING_VILLAGES 2 10}
-
-    {MEMOIRS_SECRET_PASSAGE  32 5  2 8}
-    {MEMOIRS_ITEM_STAFF 3 7}
 
     # Have Rorthin appear before Delfador can reach any of the villages
     [event]
@@ -232,7 +226,6 @@
             x=$move_from[0].x,$next_to_delf.x
             y=$move_from[0].y,$next_to_delf.y
         [/move_unit_fake]
-
         {NAMED_UNIT 3 (Ghost) $next_to_delf.x $next_to_delf.y Rorthin _"Rorthin" ()}
 
         [message]
