--- a/data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg
@@ -68,10 +68,13 @@
         [/ai]
     [/side]
     {STARTING_VILLAGES 3 5}
+    [event]
+        name=prestart
+        {CAPTURE_VILLAGES 3 33 11 1}
+        {CAPTURE_VILLAGES 3 21 12 1}
+    [/event]
 
-    #############################
     # Move hero to the starting position, and eat recall list
-    #############################
     [event]
         name=prestart
         [disallow_recruit]
@@ -82,27 +85,14 @@
         {MODIFY_UNIT (id=Delfador) facing nw}
     [/event]
 
-    #############################
-    # starting dialog
-    #############################
     [event]
         name=start
-
-        [capture_village]
-            side=3
-            x,y=33,11
-        [/capture_village]
-        [capture_village]
-            side=3
-            x,y=21,12
-        [/capture_village]
 
         [message]
             speaker=narrator
             message=_"As Delfador followed Iliah-Malal into the portal, a freezing wind sprung up and the air became thick with ghosts pouring through into the land of the living. The ground became icy underfoot, and soon Delfador was following the necromancer’s footsteps in a thick layer of snow. Eventually, even these became indistinct."
             image=wesnoth-icon.png
         [/message]
-
         [message]
             speaker=Delfador
             message=_"It’s hopeless, I’ve lost all track of Iliah-Malal... and I shall freeze unless I find shelter soon. Perhaps in that forest to the north..."
@@ -128,16 +118,13 @@
         [/objectives]
     [/event]
 
-    #############################
     # Delfador first encounters the elves
-    #############################
     [event]
         name=sighted
         [filter]
             type=Elvish Rider,Elvish Ranger
             side=3
         [/filter]
-
         [filter_second]
             side=1
         [/filter_second]
@@ -156,7 +143,6 @@
                     [/filter_vision]
                 [/have_unit]
             [/not]
-
             [then]
                 [message]
                     speaker=unit
@@ -174,9 +160,7 @@
         [/if]
     [/event]
 
-    #############################
     # Delfador encounters Chantal
-    #############################
     [event]
         name=sighted
         [filter]
@@ -337,9 +321,6 @@
         [/modify_side]
     [/event]
 
-    #############################
-    # ending dialog
-    #############################
     [event]
         name=victory
 
