--- a/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
@@ -205,30 +205,14 @@
                 carryover_percentage=80
             [/gold_carryover]
         [/objectives]
-        [recall]
-            id=Clogrin
-        [/recall]
-        [recall]
-            id=Droni
-        [/recall]
-        [recall]
-            id=Artos
-        [/recall]
-        [recall]
-            id=Theorsten
-        [/recall]
-        [recall]
-            id=Igler
-        [/recall]
-        [recall]
-            id=Larsin
-        [/recall]
-        [recall]
-            id=Glen
-        [/recall]
-        [recall]
-            id=Aldrin
-        [/recall]
+        {RECALL Clogrin}
+        {RECALL Droni}
+        {RECALL Artos}
+        {RECALL Theorsten}
+        {RECALL Igler}
+        {RECALL Larsin}
+        {RECALL Glen}
+        {RECALL Aldrin}
         {MODIFY_UNIT (side=1) facing se}
     [/event]
 
@@ -254,6 +238,81 @@
         [message]
             speaker=Delfador
             message= _ "Agreed, but we must make haste, for the King is hard pressed."
+        [/message]
+    [/event]
+
+    # The king usually takes care of the first wave of orcs by himself.
+    # They need a second wave for the player to help with.
+    # Since this event uses the player's turn, the orcs will not be
+    # able to use their gold until the following turn.
+    [event]
+        name=turn {ON_DIFFICULTY 10 9 8}
+        [gold]
+            side=4
+            {QUANTITY amount 140 230 320}
+        [/gold]
+        [gold]
+            side=5
+            {QUANTITY amount 120 210 300}
+        [/gold]
+    [/event]
+
+    # Extra help for Garard in case Delf and Kalenz are a bit late but only once
+    [event]
+        name=moveto
+        [filter]
+            side=3,4,5,6
+            x=12-17
+            y=20-24
+        [/filter]
+
+        [message]
+            speaker=Garard II
+            message= _ "The enemy is drawing near. My personal guards must join the fight. We can only hope help arrives soon."
+        [/message]
+#define TRAITS_STRONG_RESILIENT
+    [modifications]
+        {TRAIT_STRONG}
+        {TRAIT_RESILIENT}
+    [/modifications]
+#enddef
+        [move_unit_fake]
+            type=Royal Guard
+            side=2
+            x=12,12
+            y=19,20
+        [/move_unit_fake]
+        {NAMED_UNIT 2 (Royal Guard) 12 20 Adamar _"Adamar" ({TRAITS_STRONG_RESILIENT})} {FACING sw}
+        [move_unit_fake]
+            type=Royal Guard
+            side=2
+            x=16,17
+            y=23,24
+        [/move_unit_fake]
+        {NAMED_UNIT 2 (Royal Guard) 17 24 Mitbreen _"Mitbreen" ({TRAITS_STRONG_RESILIENT})} {FACING sw}
+        [move_unit_fake]
+            type=Iron Mauler
+            side=2
+            x=12,12
+            y=19,20,21,22,23
+        [/move_unit_fake]
+        {NAMED_UNIT 2 (Iron Mauler) 12 23 Ronduger _"Ronduger" ({TRAITS_STRONG_RESILIENT})} {FACING sw}
+#undef TRAITS_STRONG_RESILIENT
+        {SCROLL_TO 12 20} # is this really needed?
+        [message]
+            speaker=Adamar
+            message= _ "For the King!"
+        [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        [filter]
+            id=Zorlan
+        [/filter]
+        [message]
+            speaker=Zorlan
+            message=_ "Argh! It can't be, beaten by these swine!"
         [/message]
     [/event]
 
@@ -321,128 +380,6 @@
         [/message]
 
         {ELVES_DEPART}
-    [/event]
-
-    ## Extra help for Garard in case Delf and Kalenz are a bit late
-    #  but this is only once
-    [event]
-        name=moveto
-        [filter]
-            side=3,4,5,6
-            x=12-17
-            y=20-24
-        [/filter]
-
-        [message]
-            speaker=Garard II
-            message= _ "The enemy is drawing near. My personal guards must join the fight. We can only hope help arrives soon."
-        [/message]
-
-        [move_unit_fake]
-            type=Royal Guard
-            side=2
-            x=12,12
-            y=19,20
-        [/move_unit_fake]
-
-        [unit]
-            id=Adamar
-            name= _ "Adamar"
-            type=Royal Guard
-            side=2
-            x=12
-            y=20
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-            facing=sw
-        [/unit]
-
-        [move_unit_fake]
-            type=Royal Guard
-            side=2
-            x=16,17
-            y=23,24
-        [/move_unit_fake]
-        [unit]
-            id=Mitbreen
-            name= _ "Mitbreen"
-            type=Royal Guard
-            side=2
-            x=17
-            y=24
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-            facing=sw
-        [/unit]
-
-        [move_unit_fake]
-            type=Iron Mauler
-            side=2
-            x=12,12
-            y=19,20,21,22,23
-        [/move_unit_fake]
-
-        [unit]
-            id=Ronduger
-            name= _ "Ronduger"
-            type=Iron Mauler
-            side=2
-            x=12
-            y=23
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-            facing=sw
-        [/unit]
-
-        [scroll_to_unit]
-            x=12
-            y=20
-        [/scroll_to_unit]
-
-        [message]
-            speaker=Adamar
-            message= _ "For the King!"
-        [/message]
-    [/event]
-
-    # The king usually takes care of the first wave of orcs by himself.
-    # They need a second wave for the player to help with.
-    # Since this event uses the player's turn, the orcs will not be
-    # able to use their gold until the following turn.
-    [event]
-        name=turn {ON_DIFFICULTY 10 9 8}
-        [gold]
-            side=4
-            {QUANTITY amount 140 230 320}
-        [/gold]
-        [gold]
-            side=5
-            {QUANTITY amount 120 210 300}
-        [/gold]
-    [/event]
-
-    [event]
-        name=last breath
-        [filter]
-            id=Zorlan
-        [/filter]
-        [message]
-            speaker=Zorlan
-            message=_ "Argh! It can't be, beaten by these swine!"
-        [/message]
-    [/event]
-
-    [event]
-        name=enemies defeated
-        [endlevel]
-            result=victory
-        [/endlevel]
     [/event]
 
     {MEMOIRS_DEATHS}
