--- a/data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg
@@ -121,9 +121,6 @@
         [/objectives]
     [/event]
 
-    #############################
-    # opening dialog
-    #############################
     [event]
         name=start
         [message]
@@ -161,9 +158,7 @@
         [scroll_to_unit]
             id=Delfador
         [/scroll_to_unit]
-
         {DELFADOR_LIGHTNING}
-
         [message]
             speaker=Delfador
             message=_"I am Delfador. And you are dust!"
@@ -185,16 +180,12 @@
         [/message]
     [/event]
 
-    #############################
-    # closing dialog
-    #############################
     [event]
         name=victory
         [message]
             speaker=Ulrek
             message=_"Human, ye ha’ fought well. I am Ulrek, chieftain o’ the clan of Norlund. My house is in yer debt today. But who are ye and what do ye do in these lands?"
         [/message]
-
         [message]
             speaker=Delfador
             message=_"I am Delfador. Friends, a great evil has been unleashed. A portal has been opened to the land of the dead near the northernmost extent of these hills, nearly under the eaves of Lintanir Forest. I must close it, or else we are all doomed."
@@ -219,9 +210,7 @@
         {DWARVES_FOLLOW_DELFADOR}
     [/event]
 
-    ###############################################
-    # defeat player if Ulrek or Relgorn is killed #
-    ###############################################
+    # defeat player if Ulrek or Relgorn is killed
     [event]
         name=die
         [filter]
