--- a/data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg
@@ -228,7 +228,6 @@
 
     [event]
         name=start
-
         [message]
             speaker=Iliah-Malal
             message= _ "So we meet again, Delfador. You were a fool to turn down my offer. None of your allies will save you now."
@@ -275,7 +274,6 @@
         [filter]
             race=undead
         [/filter]
-
         # Most likely facings for this dialog, as recall of undead will probably happen turn 1 or 2
         {MODIFY_UNIT (id=Lionel) facing nw}
         [message]
@@ -295,12 +293,10 @@
             speaker=Delfador
             message= _ "I have prepared some holy water. Sprinkle it on your weapons and smash those foul creatures into dust!"
         [/message]
-
         [message]
             speaker=Iliah-Malal
             message= _ "Powers of darkness, enshroud this field!"
         [/message]
-
         [place_shroud]
             side=1,2
         [/place_shroud]
@@ -309,6 +305,7 @@
             clear_shroud=yes
         [/redraw]
     [/event]
+
     [event]
         name=turn 3
         {MODIFY_UNIT (id=Delfador) facing nw}
@@ -316,7 +313,6 @@
             speaker=Delfador
             message= _ "Darkness shall be dispelled!"
         [/message]
-
         [remove_shroud]
             side=1,2
         [/remove_shroud]
@@ -337,13 +333,11 @@
             speaker=Delfador
             message= _ "Your mindless minions will be no match for the spirit and fire of the living."
         [/message]
-
         {MODIFY_UNIT (id=Lionel) facing nw}
         [message]
             speaker=Lionel
             message= _ "Delfador, as the King ordered I place all troops under your command. They will follow you to death, if necessary, and so will I!"
         [/message]
-
         {MODIFY_UNIT (id=Delfador) facing se}
         [message]
             speaker=Delfador
@@ -384,7 +378,6 @@
         [filter_second]
             race=undead
         [/filter_second]
-
         [message]
             speaker=Delfador
             message= _ "Now your days are ended!"
@@ -398,9 +391,7 @@
             message= _ "Not this time. For I have gazed upon the dark heart of necromancy in the Book of Crelanu, and found there your final doom at the hands of the dead themselves."
         [/message]
         {DELFADOR_LIGHTNING}
-
-        # We're counting on the lich-scream as Ihiah-Malal
-        # dies to end the scene.
+        # We're counting on the lich-scream as Ihiah-Malal dies to end the scene.
     [/event]
 
     # Delfador can kill him
@@ -412,7 +403,6 @@
         [filter_second]
             id=Delfador
         [/filter_second]
-
         [message]
             speaker=Delfador
             message= _ "Now your days are ended!"
@@ -426,9 +416,7 @@
             message= _ "Not this time. For I have gazed upon the dark heart of necromancy in the Book of Crelanu, AND I REMAIN OF THE LIGHT!"
         [/message]
         {DELFADOR_LIGHTNING}
-
-        # We're counting on the lich-scream as Ihiah-Malal
-        # dies to end the scene.
+        # We're counting on the lich-scream as Ihiah-Malal dies to end the scene.
     [/event]
 
     # But nobody else can.
@@ -446,30 +434,17 @@
                 race=undead
             [/not]
         [/filter_second]
-
         [message]
             speaker="Iliah-Malal"
             message=_ "The power of death is mine! When you strike me down I arise stronger than before!"
         [/message]
-
         # He gets the standard +3 hitpoints and full heal.
         {ADVANCE_UNIT (id="Iliah-Malal") ()}
-    [/event]
-
-    [event]
-        name=enemies defeated
-
-        [endlevel]
-            result=victory
-            bonus=no
-            carryover_percentage=0
-        [/endlevel]
     [/event]
 
     # wmllint: recognize Kalenz
     [event]
         name=victory
-
         [message]
             speaker=Delfador
             message= _ "Evil has been vanquished on this day. May this victory bring lasting peace."
