--- a/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
@@ -98,7 +98,7 @@
             facing=sw
         [/leader]
         [ai]
-            #recruitment_pattern=fighter,archer,mixed fighter,scout
+            # recruitment_pattern=fighter,archer,mixed fighter,scout
             aggression=1.0
             caution=0.0
             [goal]
@@ -188,7 +188,7 @@
             message= _ "Elves! And that traitor, Delfador is with them! Riders, quickly, go alert the queen. And guards, prepare to strike them down!"
         [/message]
 
-        {HIGHLIGHT_IMAGE 1  19 scenery/signpost.png ()}
+        {HIGHLIGHT_IMAGE  1 19 scenery/signpost.png ()}
         {HIGHLIGHT_IMAGE 18 33 scenery/signpost.png ()}
     [/event]
 
@@ -364,12 +364,11 @@
                 side=1
                 x,y=32,8
             [/filter]
-
             [music]
                 name=northerners.ogg
                 play_once=yes
             [/music]
-
+            # victory dialog
             [message]
                 speaker=unit
                 message= _ "This looks like a secret door. Let’s see where it leads..."
@@ -497,6 +496,7 @@
             result=defeat
         [/endlevel]
     [/event]
+
     [event]
         name=moveto
         [filter]
