--- a/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
@@ -259,98 +259,6 @@
         [/message]
     [/event]
 
-#define SECOND_WAVE
-    [unit]
-        id=Axhamr
-        name=_ "Axhamr"
-        type=Draug
-        side=3
-        x=48
-        y=27
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-    [unit]
-        id=Horfir
-        name=_ "Horfir"
-        type=Spectre
-        side=3
-        x=40
-        y=31
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-
-    [unit]
-        id=Backu
-        name=_ "Backu"
-        type=Nightgaunt
-        side=3
-        x=41
-        y=35
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-
-    [unit]
-        id=Camdun
-        name=_ "Camdun"
-        type=Chocobone
-        side=3
-        x=40
-        y=31
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-
-    [unit]
-        id=Drapug
-        name=_ "Drapug"
-        type=Wraith
-        side=3
-        x=36
-        y=32
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-
-    [unit]
-        id=Kalip
-        name=_ "Kalip"
-        type=Ghost
-        side=3
-        x=38
-        y=34
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-
-    [unit]
-        id=Abmin
-        name=_ "Abmin"
-        type=Deathblade
-        side=3
-        x=42
-        y=30
-        [modifications]
-            {TRAIT_STRONG}
-            {TRAIT_RESILIENT}
-        [/modifications]
-    [/unit]
-#enddef
-
 #define AMBUSH_WARNING X Y RADIUS
     [event]
         name=enter_hex
@@ -373,7 +281,7 @@
     [/event]
 #enddef
 
-    ##### Utility events used for sighting other sides
+    # Utility events used for sighting other sides
     [event]
         name=undeads
         first_time_only=yes
@@ -492,16 +400,14 @@
 
         {SUBSUME_SIDE_AND_VILLAGES 4}
 
-        [scroll_to]
-            x,y = 39,40
-        [/scroll_to]
+        {SCROLL_TO 39 40}
 
         [message]
             speaker=narrator
             message= _ "To wake up the mages, move a unit near their tower."
             image=wesnoth-icon.png
         [/message]
-        ##dialog with loyalists
+        # dialog with loyalists
 
         [fire_event]
             name=enemies
@@ -636,18 +542,22 @@
         {SUBSUME_SIDE_AND_VILLAGES 5}
     [/event]
 
-    #################from here on
+#define TRAITS_STRONG_RESILIENT
+    [modifications]
+        {TRAIT_STRONG}
+        {TRAIT_RESILIENT}
+    [/modifications]
+#enddef
 
-    # Move to 34,6 burned village (nearest keep):
-    # Nobody there
+    # from here on
+
+    # Move to 34,6 burned village (nearest keep): Nobody there
     [event]
         name=moveto
         [filter]
             side=1
-            x=34
-            y=6
+            x,y=34,6
         [/filter]
-
         [message]
             speaker=unit
             message= _ "What is going on here? This village has been burned to the ground!"
@@ -663,8 +573,7 @@
         name=moveto
         [filter]
             side=1
-            x=29
-            y=13
+            x,y=29,13
         [/filter]
         [message]
             speaker=unit
@@ -677,8 +586,7 @@
         name=moveto
         [filter]
             side=1
-            x=31
-            y=10
+            x,y=31,10
         [/filter]
         [move_unit_fake]
             type=Spearman
@@ -691,8 +599,7 @@
             id=Theorin
             name= _ "Theorin"
             side=1
-            x=31
-            y=9
+            x,y=31,9
             {IS_LOYAL}
             [modifications]
                 {TRAIT_LOYAL}
@@ -726,14 +633,12 @@
         [/fire_event]
     [/event]
 
-    # Move to 29,24 village (northernmost in keep):
-    # brave Loyalists Donc, Stanis
+    # Move to 29,24 village (northernmost in keep): brave Loyalists Donc, Stanis
     [event]
         name=moveto
         [filter]
             side=1
-            x=29
-            y=24
+            x,y=29,24
         [/filter]
         #{NAMED_LOYAL_UNIT 1 (Heavy Infantryman) 29 23 (Donc) ( _ "Donc") }
         #{NAMED_LOYAL_UNIT 1 (Halberdier) (Stanis) 29 25 ( _ "Stanis") }
@@ -748,8 +653,7 @@
             id=Donc
             name= _ "Donc"
             side=1
-            x=29
-            y=23
+            x,y=29,23
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_STRONG}
@@ -766,8 +670,7 @@
             id=Stanis
             name= _ "Stanis"
             side=1
-            x=29
-            y=25
+            x,y=29,25
             {IS_LOYAL}
             [modifications]
                 {TRAIT_LOYAL}
@@ -801,8 +704,7 @@
         name=moveto
         [filter]
             side=1
-            x=44
-            y=11
+            x,y=44,11
         [/filter]
         [message]
             speaker=unit
@@ -817,55 +719,21 @@
             x=44,44
             y=11,12
         [/move_unit_fake]
-        [unit]
-            type=Deathblade
-            id=Bled
-            name= _ "Bled"
-            side=3
-            x=44
-            y=12
-            [modifications]
-                {TRAIT_INTELLIGENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 3 (Deathblade) 44 12 Bled _"Bled" ({TRAITS_STRONG_RESILIENT})}
         [move_unit_fake]
             type=Ghost
             side=3
             x=44,45
             y=11,11
         [/move_unit_fake]
-        [unit]
-            type=Ghost
-            id=Crod
-            name= _ "Crod"
-            side=3
-            x=45
-            y=11
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
-
+        {NAMED_UNIT 3 (Ghost) 45 11 Crod _"Crod" ({TRAITS_STRONG_RESILIENT})}
         [move_unit_fake]
             type=Wraith
             side=3
             x=44,43
             y=11,11
         [/move_unit_fake]
-        [unit]
-            type=Wraith
-            id=Angedd
-            name= _ "Angedd"
-            side=3
-            x=43
-            y=11
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 3 (Wraith) 43 11 Angedd _"Angedd" ({TRAITS_STRONG_RESILIENT})}
         [message]
             speaker=Angedd
             message= _ "Surprise, surprise..."
@@ -878,8 +746,7 @@
             name=undeads
             [primary_unit]
                 side=1
-                x=44
-                y=11
+                x,y=44,11
             [/primary_unit]
         [/fire_event]
     [/event]
@@ -889,8 +756,7 @@
         name=moveto
         [filter]
             side=1
-            x=29
-            y=26
+            x,y=29,26
         [/filter]
         #{NAMED_LOYAL_UNIT 1 (Heavy Infantryman)  29  25 Zagar (_ "Zagar")}
         #{NAMED_LOYAL_UNIT 1 (Heavy Infantryman) 29 27 Brox (_ "Brox")}
@@ -906,8 +772,7 @@
             id=Zagar
             name= _ "Zagar"
             side=1
-            x=29
-            y=25
+            x,y=29,25
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_STRONG}
@@ -924,14 +789,12 @@
             id=Brox
             name= _ "Brox"
             side=1
-            x=29
-            y=27
+            x,y=29,27
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_STRONG}
             [/modifications]
         [/unit]
-
         [move_unit_fake]
             type=Longbowman
             side=1
@@ -943,8 +806,7 @@
             id=Adran
             name= _ "Adran"
             side=1
-            x=28
-            y=26
+            x,y=28,26
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_DEXTROUS}
@@ -973,8 +835,7 @@
         name=moveto
         [filter]
             side=1
-            x=32
-            y=23
+            x,y=32,23
         [/filter]
         #{NAMED_LOYAL_UNIT 1 (Heavy Infantryman)  31  23 Axios (_ "Axios")}
         #{NAMED_LOYAL_UNIT 1 (Spearman) 32 24 Ulfter (_ "Ulfter")}
@@ -990,8 +851,7 @@
             id=Axios
             name= _ "Axios"
             side=1
-            x=31
-            y=23
+            x,y=31,23
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_STRONG}
@@ -1008,8 +868,7 @@
             id=Ulfter
             name= _ "Ulfter"
             side=1
-            x=32
-            y=24
+            x,y=32,24
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_STRONG}
@@ -1026,8 +885,7 @@
             id=Ogdal
             name= _ "Ogdal"
             side=1
-            x=33
-            y=23
+            x,y=33,23
             [modifications]
                 {TRAIT_RESILIENT}
                 {TRAIT_DEXTROUS}
@@ -1051,8 +909,7 @@
         name=moveto
         [filter]
             side=1
-            x=34
-            y=25
+            x,y=34,25
         [/filter]
         [message]
             speaker=unit
@@ -1065,18 +922,7 @@
             x=34,34
             y=25,24
         [/move_unit_fake]
-        [unit]
-            type=Draug
-            id=Dreadred
-            name= _ "Dreadred"
-            side=3
-            x=34
-            y=24
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 3 (Draug) 34 24 Dreadred _"Dreadred" ({TRAITS_STRONG_RESILIENT})}
         [message]
             speaker=Dreadred
             message= _ "Master said more would come!"
@@ -1085,8 +931,7 @@
             name=undeads
             [primary_unit]
                 side=1
-                x=34
-                y=25
+                x,y=34,25
             [/primary_unit]
         [/fire_event]
     [/event]
@@ -1097,8 +942,7 @@
         name=moveto
         [filter]
             side=1
-            x=24
-            y=11
+            x,y=24,11
         [/filter]
         [message]
             speaker=unit
@@ -1114,72 +958,28 @@
             x=24,24
             y=11,12
         [/move_unit_fake]
-        [unit]
-            type=Orcish Warrior
-            id=Crum
-            name= _ "Crum"
-            side=2
-            x=24
-            y=12
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 2 (Orcish Warrior) 24 12 Crum _"Crum" ({TRAITS_STRONG_RESILIENT})}
         [move_unit_fake]
             type=Orcish Grunt
             side=2
             x=24,24
             y=11,10
         [/move_unit_fake]
-        [unit]
-            type=Orcish Grunt
-            id=Smalg
-            name= _ "Smalg"
-            side=2
-            x=24
-            y=10
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 2 (Orcish Grunt) 24 10 Smalg _"Smalg" ({TRAITS_STRONG_RESILIENT})}
         [move_unit_fake]
             type=Orcish Archer
             side=2
             x=24,25
             y=11,11
         [/move_unit_fake]
-        [unit]
-            type=Orcish Archer
-            id=Grubar
-            name= _ "Grubar"
-            side=2
-            x=25
-            y=11
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 2 (Orcish Archer) 25 11 Grubar _"Grubar" ({TRAITS_STRONG_RESILIENT})}
         [move_unit_fake]
             type=Orcish Assassin
             side=2
             x=24,23
             y=11,11
         [/move_unit_fake]
-        [unit]
-            type=Orcish Assassin
-            id=Ulkar
-            name= _ "Ulkar"
-            side=2
-            x=23
-            y=11
-            [modifications]
-                {TRAIT_RESILIENT}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
+        {NAMED_UNIT 2 (Orcish Assassin) 23 11 Ulkar _"Ulkar" ({TRAITS_STRONG_RESILIENT})}
 
         [message]
             speaker=Crum
@@ -1189,13 +989,35 @@
             name=orcs
             [primary_unit]
                 side=1
-                x=24
-                y=11
+                x,y=24,11
             [/primary_unit]
         [/fire_event]
     [/event]
 
-    # Enemy deaths
+    # Second wave of undead
+    [event]
+        name=turn 7
+
+        {NAMED_UNIT 3 (Draug)      48 27 Axhamr _"Axhamr" ({TRAITS_STRONG_RESILIENT})}
+        {NAMED_UNIT 3 (Spectre)    40 31 Horfir _"Horfir" ({TRAITS_STRONG_RESILIENT})}
+        {NAMED_UNIT 3 (Nightgaunt) 41 35 Backu _"Backu" ({TRAITS_STRONG_RESILIENT})}
+        {NAMED_UNIT 3 (Chocobone)  40 31 Camdun _"Camdun" ({TRAITS_STRONG_RESILIENT})}
+        {NAMED_UNIT 3 (Wraith)     36 32 Drapug _"Drapug" ({TRAITS_STRONG_RESILIENT})}
+        {NAMED_UNIT 3 (Ghost)      38 34 Kalip _"Kalip" ({TRAITS_STRONG_RESILIENT})}
+        {NAMED_UNIT 3 (Deathblade) 42 30 Abmin _"Abmin" ({TRAITS_STRONG_RESILIENT})}
+        [if]
+            [variable]
+                name=undead_spotted
+                equals=yes
+            [/variable]
+            [then]
+                [message]
+                    speaker=Delfador
+                    message= _ "They have unleashed a second wave. Soldiers, stand firm and send these abominations back to the darkness!"
+                [/message]
+            [/then]
+        [/if]
+    [/event]
 
     [event]
         name=last breath
@@ -1245,9 +1067,7 @@
             [/then]
         [/if]
     [/event]
-    #end deaths of enemies
 
-    # Victory
     [event]
         name=victory
         [message]
@@ -1262,7 +1082,6 @@
             speaker=Chantal
             message= _ "Word had just arrived when I left Lintanir that the High Lord Kalenz was mustering an elvish army against the orcs, but he is not aware of the King’s movements or of any trap in wait for him. And he certainly does not know of the undead menace."
         [/message]
-
         [message]
             speaker=Delfador
             message= _ "Maybe we can warn the King in time. Lionel should be back in Weldyn by now; I shall send one of the garrison’s message-riders to him, but I cannot spare the time to go south myself. I will gather as many troops as I can move quickly through these wildlands and head west from here."
@@ -1289,25 +1108,6 @@
         {CLEAR_VARIABLE undead_spotted}
     [/event]
 
-    # Second wave of undead
-    [event]
-        name=turn 7
-        {SECOND_WAVE}
-        [if]
-            [variable]
-                name=undead_spotted
-                equals=yes
-            [/variable]
-            [then]
-                [message]
-                    speaker=Delfador
-                    message= _ "They have unleashed a second wave. Soldiers, stand firm and send these abominations back to the darkness!"
-                [/message]
-            [/then]
-        [/if]
-    [/event]
-
-    # Time over
     [event]
         name=time over
         [message]
@@ -1320,4 +1120,4 @@
 [/scenario]
 
 #undef AMBUSH_WARNING
-#undef SECOND_WAVE
+#undef TRAITS_STRONG_RESILIENT
