--- a/data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg
@@ -17,23 +17,9 @@
     # fight with trolls or something during Delfador's odyssey through
     # the tunnels. This does not have to be a picnic excursion.
 
-    [item]
-        x=2
-        y=19
-        image=scenery/mine-abandoned.png
-    [/item]
-
-    [item]
-        x=20
-        y=20
-        image=scenery/summoning-center.png
-    [/item]
-
-    [item]
-        x=19
-        y=22
-        image=scenery/summoning-center.png
-    [/item]
+    {PLACE_IMAGE scenery/mine-abandoned.png 2 19}
+    {PLACE_IMAGE scenery/summoning-center.png 20 20}
+    {PLACE_IMAGE scenery/summoning-center.png 19 22}
 
     [story]
         [part]
@@ -89,11 +75,11 @@
         [/leader]
         [ai]
             aggression=0.0
-            #recruitment_pattern=scout, mixed fighter, archer
+            # recruitment_pattern=scout, mixed fighter, archer
             # there are a lot of close villages
-            #villages_per_scout=6
+            # villages_per_scout=6
 
-            # attack Delfador   heavily
+            # attack Delfador heavily
             leader_value=2.0
             [goal]
                 name=target
@@ -129,9 +115,9 @@
         [/leader]
         [ai]
             aggression=0.0
-            #recruitment_pattern=scout, mixed fighter, archer
+            # recruitment_pattern=scout, mixed fighter, archer
             # there are a lot of close villages
-            #villages_per_scout=6
+            # villages_per_scout=6
 
             # attack Delfador   heavily
             leader_value=2.0
@@ -202,24 +188,14 @@
             [/gold_carryover]
         [/objectives]
 
-        # Capturing 2,18 is because Ulrek is likely to materialize on top of
-        # this village, and it's just silly for him to have to step
-        # out and back to capture it.
-        [capture_village]
-            x,y=2,18
-            side=1
-        [/capture_village]
+        # Capture this one because Ulrek is likely to materialize on top of it,
+        # and it's just silly for him to have to step out and back to capture it.
+        {CAPTURE_VILLAGES 1 02 18 1}
         # We have mercy on the player and don't make him slog a unit
         # through mountains to get this one.
-        [capture_village]
-            x,y=2,21
-            side=1
-        [/capture_village]
+        {CAPTURE_VILLAGES 1 02 21 1}
     [/event]
 
-    #############################
-    # opening dialog
-    #############################
     [event]
         name=start
         [message]
@@ -244,11 +220,124 @@
     [/event]
 
     [event]
+        name=iliah-malal
+        # Materialize the bad guy on his keep
+        [unit]
+            side=4
+            {ILIAH_MALAL (Ancient Lich)}
+            canrecruit=yes
+            x,y=18,3
+            facing=sw
+        [/unit]
+        {NAMED_UNIT 4 (Draug)      18 4 Samun _"Samun" (facing=sw)}
+        {NAMED_UNIT 4 (Banebow)    17 3 Skoogal _"Skoogal" (facing=sw)}
+        {NAMED_UNIT 4 (Deathblade) 17 4 Skulrag _"Skulrag" (facing=sw)}
+        {NAMED_UNIT 4 (Nightgaunt) 19 4 Idthom _"Idthom" (facing=sw)}
+        {NAMED_UNIT 4 (Chocobone)  16 2 Hyvrun _"Hyvrun" (facing=sw)}
+        {NAMED_UNIT 4 (Blood Bat)  14 2 Blud _"Blud" (facing=sw)}
+        [modify_side]
+            side=4
+            hidden=no
+            {INCOME 10 20 30}
+        [/modify_side]
+        [message]
+            speaker=Iliah-Malal
+            message= _ "What’s going on here? Is this Delfador? Welcome to your doom, Delfador!"
+        [/message]
+        [message]
+            speaker=Delfador
+            message= _ "They have reinforcements. Hurry, we must close the portal before we are overrun!"
+        [/message]
+        [message]
+            speaker=Iliah-Malal
+            message= _ "Slay them all!"
+        [/message]
+    [/event]
+
+    [event]
+        name=turn 9
+        [fire_event]
+            name=iliah-malal
+        [/fire_event]
+    [/event]
+
+    # Isolate special effects from story logic for testing.
+    [event]
+        name=close_portal
+        # First, a flash of light
+        [sound]
+            name=lightning.ogg
+        [/sound]
+        {COLOR_ADJUST 100 100 100}
+        [delay]
+            time=10
+        [/delay]
+        {COLOR_ADJUST 0 0 0}
+        # Then, turn the Ethereal Abyss tiles to lava chasm
+        [terrain]
+            x=20,20,21,21,21,21
+            y=21,22,20,21,22,23
+            terrain=Ql
+        [/terrain]
+        # Next, remove the summoning circles
+        {REMOVE_IMAGE 20 20}
+        {REMOVE_IMAGE 19 22}
+        # Now, crumble the castle
+        [terrain]
+            x=19,19,20,20,21,21,18,18,19,19,20,20,21,21
+            y=17,18,17,18,18,19,23,24,24,25,23,24,24,25
+            terrain=Chr
+        [/terrain]
+        [terrain]
+            x=20,19
+            y=19,23
+            terrain=Khr
+        [/terrain]
+    [/event]
+
+    [event]
+        name=die
+        [filter_second]
+            id=Delfador
+        [/filter_second]
+
+        [scroll_to_unit]
+            id=Delfador
+        [/scroll_to_unit]
+        {DELFADOR_LIGHTNING}
+        [message]
+            speaker=Delfador
+            message= _ "Out of my way, foul creatures!"
+        [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        first_time_only=no
+        [filter]
+            id=Iliah-Malal
+        [/filter]
+        [message]
+            speaker="Iliah-Malal"
+            message=_ "Fool! You could not kill me in the land of the dead, nor can you in the land of the living! I transcend both death and life, and I will destroy you!"
+        [/message]
+        [message]
+            speaker=Delfador
+            message= _ "We cannot defeat him now. We must carry out our mission first, so we will be able to defeat him later."
+        [/message]
+        # He gets a full heal, not an advance, otherwise we'd have to make sure we ported him to the next scenario properly
+        [heal_unit]
+            [filter]
+                id=Iliah-Malal
+            [/filter]
+        [/heal_unit]
+    [/event]
+
+    [event]
         name=moveto
         [filter]
             id=Delfador
-            x=19
-            y=21
+            x,y=19,21
         [/filter]
 
         [fire_event]
@@ -262,20 +351,16 @@
         [scroll_to_unit]
             id=Delfador
         [/scroll_to_unit]
-
         [fire_event]
             name=close_portal
         [/fire_event]
-
         [delay]
             time=1500
         [/delay]
-
         [message]
             speaker=Iliah-Malal
             message=_"Portal, reopen! No! What have you done?"
         [/message]
-
         {MODIFY_UNIT (id=Delfador) facing nw}
         [message]
             speaker=Delfador
@@ -344,8 +429,7 @@
             first_time_only=no
             [filter]
                 side=1
-                x=2
-                y=19
+                x,y=2,19
                 [not]
                     id=Delfador
                 [/not]
@@ -359,13 +443,10 @@
         [event]
             name=moveto
             first_time_only=no
-
             [filter]
                 id=Delfador
-                x=2
-                y=19
+                x,y=2,19
             [/filter]
-
             [if]
                 [have_unit]
                     side=1
@@ -380,6 +461,7 @@
                     [/message]
                 [/then]
                 [else]
+                    # victory dialog
                     [message]
                         speaker=Delfador
                         message=_"We’re in. Now: Earth, seal this entrance!"
@@ -387,180 +469,20 @@
                     [scroll_to_unit]
                         id=Delfador
                     [/scroll_to_unit]
-
                     [sound]
                         name=lightning.ogg
                     [/sound]
-
-                    [color_adjust]
-                        red=100
-                        green=100
-                        blue=100
-                    [/color_adjust]
-
+                    {COLOR_ADJUST 100 100 100}
                     [delay]
                         time=10
                     [/delay]
-
-                    [color_adjust]
-                        red=0
-                        green=0
-                        blue=0
-                    [/color_adjust]
+                    {COLOR_ADJUST 0 0 0}
                     [endlevel]
                         result=victory
                     [/endlevel]
                 [/else]
             [/if]
         [/event]
-    [/event]
-
-    [event]
-        name=die
-
-        [filter_second]
-            id=Delfador
-        [/filter_second]
-
-        [scroll_to_unit]
-            id=Delfador
-        [/scroll_to_unit]
-
-        {DELFADOR_LIGHTNING}
-
-        [message]
-            speaker=Delfador
-            message= _ "Out of my way, foul creatures!"
-        [/message]
-    [/event]
-
-    #############################
-    # closing dialog
-    #############################
-    #    [event]
-    #        name=victory
-    #
-    #    [/event]
-
-    [event]
-        name=iliah-malal
-
-        # Materialize the bad guy on his keep
-        [unit]
-            side=4
-            {ILIAH_MALAL (Ancient Lich)}
-            canrecruit=yes
-            x,y=18,3
-            facing=sw
-        [/unit]
-
-        {NAMED_UNIT 4 (Draug)      18 4 Samun _"Samun" (facing=sw)}
-        {NAMED_UNIT 4 (Banebow)    17 3 Skoogal _"Skoogal" (facing=sw)}
-        {NAMED_UNIT 4 (Deathblade) 17 4 Skulrag _"Skulrag" (facing=sw)}
-        {NAMED_UNIT 4 (Nightgaunt) 19 4 Idthom _"Idthom" (facing=sw)}
-        {NAMED_UNIT 4 (Chocobone)  16 2 Hyvrun _"Hyvrun" (facing=sw)}
-        {NAMED_UNIT 4 (Blood Bat)  14 2 Blud _"Blud" (facing=sw)}
-
-        [modify_side]
-            side=4
-            hidden=no
-            {INCOME 10 20 30}
-        [/modify_side]
-
-        [message]
-            speaker=Iliah-Malal
-            message= _ "What’s going on here? Is this Delfador? Welcome to your doom, Delfador!"
-        [/message]
-        [message]
-            speaker=Delfador
-            message= _ "They have reinforcements. Hurry, we must close the portal before we are overrun!"
-        [/message]
-        [message]
-            speaker=Iliah-Malal
-            message= _ "Slay them all!"
-        [/message]
-    [/event]
-
-    [event]
-        name=turn 9
-        [fire_event]
-            name=iliah-malal
-        [/fire_event]
-    [/event]
-
-    [event]
-        name=last breath
-        first_time_only=no
-        [filter]
-            id=Iliah-Malal
-        [/filter]
-        [message]
-            speaker="Iliah-Malal"
-            message=_ "Fool! You could not kill me in the land of the dead, nor can you in the land of the living! I transcend both death and life, and I will destroy you!"
-        [/message]
-        [message]
-            speaker=Delfador
-            message= _ "We cannot defeat him now. We must carry out our mission first, so we will be able to defeat him later."
-        [/message]
-        # He gets a full heal, not an advance, otherwise we'd have to make sure we ported him to the next scenario properly
-        [heal_unit]
-            [filter]
-                id=Iliah-Malal
-            [/filter]
-        [/heal_unit]
-    [/event]
-
-    # Isolate special effects from story logic for testing.
-    [event]
-        name=close_portal
-        [sound]
-            name=lightning.ogg
-        [/sound]
-
-        [color_adjust]
-            red=100
-            green=100
-            blue=100
-        [/color_adjust]
-
-        [delay]
-            time=10
-        [/delay]
-
-        [color_adjust]
-            red=0
-            green=0
-            blue=0
-        [/color_adjust]
-
-        # First, turn the Ethereal Abyss tiles to lava chasm
-        [terrain]
-            x=20,20,21,21,21,21
-            y=21,22,20,21,22,23
-            terrain=Ql
-        [/terrain]
-        # Next, remove the summoning circles
-        [remove_item]
-            x=20
-            y=20
-            image=scenery/summoning-center.png
-        [/remove_item]
-        [remove_item]
-            x=19
-            y=22
-            image=scenery/summoning-center.png
-        [/remove_item]
-        # Now, crumble the castle
-        [terrain]
-            x=19,19,20,20,21,21,18,18,19,19,20,20,21,21
-            y=17,18,17,18,18,19,23,24,24,25,23,24,24,25
-            terrain=Chr
-        [/terrain]
-        [terrain]
-            x=20,19
-            y=19,23
-            terrain=Khr
-        [/terrain]
     [/event]
 
     {MEMOIRS_DEATHS}
