ANL: use loyal guardians and adjust income in return
Killing a guardian (the guards or a spider) punished the player,
because the AI then doesn't need to pay upkeep anymore for that unit.

That has been changed, and as the AI has thus less cost, the income needs
adjustments too:

The following has been taken into account:
- the guardian units had upkeep costs of 7g
- the AI has 3-4 villages, each worthy 1g of village_support
  * before turn 7, the AI can't recruit Lv 1 units. From turn 9 it recruits
    exclusively Lv 1 units.
  * This means in the early game the AI payed just 4g upkeep for the
    guardians and when it managed to recruit 3 Lv 1 units it was equal to 7g
- in the late game the AI may need more money in general, as Lv 2 units are
  expensive. The fact that the AI gets 50g in turn 17 means that the income
  is too low to buy the units normally.

The general idea is to have with this change same amount of money in the
early game and the same or more in the late game.

To address the above:
- 4g less income
- the Lv 3 spider is usually killed in each game, often before turn 7. It's
  seen as compensation for the village_gold
- The income of the AI is increased in relation to the turns. From turn 15 on:
  Each turn one of the AIs gets +1g income – in average +1g income each 4 turns.

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -114,7 +114,7 @@
         user_team_name= _ "teamname^Enemies"
         gold=25
         recruit=Walking Corpse
-        income=20
+        income=16
         village_gold=2
         team_lock=yes
         gold_lock=no
@@ -145,7 +145,7 @@
         user_team_name= _ "teamname^Enemies"
         gold=25
         recruit=Goblin Spearman
-        income=20
+        income=16
         village_gold=2
         team_lock=yes
         gold_lock=no
@@ -176,7 +176,7 @@
         user_team_name= _ "teamname^Enemies"
         gold=25
         recruit=Goblin Spearman
-        income=20
+        income=16
         village_gold=2
         team_lock=yes
         gold_lock=no
@@ -207,7 +207,7 @@
         user_team_name= _ "teamname^Enemies"
         gold=25
         recruit=Walking Corpse
-        income=20
+        income=16
         village_gold=2
         team_lock=yes
         gold_lock=no
@@ -882,6 +882,29 @@
             side=5,8
             type=Necrophage,Bone Shooter,Revenant
         [/allow_recruit]
+    [/event]
+
+    [event]
+        name=turn 15
+
+        # increase each turn one enemys income by 1
+        [event]
+            name=new turn
+            first_time_only=no
+
+            [store_side]
+                side="$($turn_number % 4 + 5)"
+                variable=side
+            [/store_side]
+            # [store_side]base_income is the income without villages and upkeep.
+            # [modify_side]income is the value from the WML file, always 2 less.
+            # thus -1 instead of +1 to increase by 1
+            [modify_side]
+                side="$($turn_number % 4 + 5)"
+                income="$($side.base_income-1)"
+            [/modify_side]
+            {CLEAR_VARIABLE side}
+        [/event]
     [/event]
 #endif
 [/multiplayer]
