--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -244,6 +244,7 @@
         random_traits=no
         x={X}
         y={Y}
+        upkeep=loyal
     [/unit]
 #enddef
 
@@ -260,6 +261,7 @@
         [modifications]
             {MOVEMENT_RESTRICTION}
         [/modifications]
+        upkeep=loyal
     [/unit]
 #enddef
 
@@ -273,6 +275,7 @@
         random_traits=no
         x={X}
         y={Y}
+        upkeep=loyal
     [/unit]
 #enddef
 
