ANL: use seperate side for spiders
not necessary, side effects:
 - it's obvious that they don't cost upkeep
 - no vision sharing of the caves with the enemies
 - can also attack the enemies though that probably won't happen

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -236,20 +236,54 @@
         controller=null
         allow_player=no
         disallow_observers=yes
-        no_leader=yes
         hidden=yes
-        team_name=settlers,enemies
+        share_vision=none
+        team_name=settlers,enemies,monsters
         user_team_name= _ "teamname^Prisoners"
         income=-2
         village_gold=0
         team_lock=yes
         gold_lock=yes
         income_lock=yes
+        leader_lock=yes
+        controller_lock=yes
         [ai]
             ai_algorithm=idle_ai
         [/ai]
     [/side]
 
+    [side]
+        side=10
+        color=lightblue
+        canrecruit=no
+        controller=ai
+        allow_player=no
+        disallow_observers=yes
+        hidden=yes
+        share_vision=none
+        team_name=monsters
+        user_team_name= _ "teamname^Monsters"
+        gold=0
+        income=-2
+        village_gold=0
+        team_lock=no
+        gold_lock=yes
+        income_lock=yes
+        leader_lock=yes
+        controller_lock=yes
+#ifdef MULTIPLAYER_A_NEW_LAND_LOAD
+        [ai]
+            aggression=1.0
+            village_value=0
+            # avoiding the AI guards in case it's lured out
+            [avoid]
+                x=26,34,26,34
+                y=18,18,37,37
+                radius=1
+            [/avoid]
+        [/ai]
+#endif
+    [/side]
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
     # ------------------------------------------------------
     # ANL Building Logic
@@ -346,10 +380,10 @@
         {ANL_PLACE_TRAPPED_UNIT 9 "Elder Wose" 36 43}
 
         # Placing spiders
-        {ANL_PLACE_WOUNDED_UNIT 5 "Giant Spider" 29 13 4}
-        {ANL_PLACE_WOUNDED_UNIT 6 "Giant Spider" 31 13 4}
-        {ANL_PLACE_WOUNDED_UNIT 7 "Giant Spider" 29 43 4}
-        {ANL_PLACE_WOUNDED_UNIT 8 "Giant Spider" 31 43 4}
+        {ANL_PLACE_WOUNDED_UNIT 10 "Giant Spider" 29 13 4}
+        {ANL_PLACE_WOUNDED_UNIT 10 "Giant Spider" 31 13 4}
+        {ANL_PLACE_WOUNDED_UNIT 10 "Giant Spider" 29 43 4}
+        {ANL_PLACE_WOUNDED_UNIT 10 "Giant Spider" 31 43 4}
 
         # Initial AI units - Side 5
         {ANL_PLACE_UNIT 5 "Walking Corpse" 10 25}
