ANL: use core macros within anl macros

--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -236,29 +236,15 @@
 #enddef
 
 #define ANL_PLACE_UNIT SIDE TYPE X Y
-    [unit]
-        side={SIDE}
-        type={TYPE}
-        generate_name=yes
-        ai_special=guardian
-        random_traits=no
-        x={X}
-        y={Y}
-        upkeep=loyal
-    [/unit]
+    {NOTRAIT_UNIT {SIDE} {TYPE} {X} {Y} }
+    {GUARDIAN}
 #enddef
 
 #define ANL_PLACE_GUARDIAN SIDE TYPE X Y
-    [unit]
-        side={SIDE}
-        type={TYPE}
-        generate_name=yes
-        ai_special=guardian
-        random_traits=no
-        role=guardian
-        x={X}
-        y={Y}
-        [modifications]
+    {NOTRAIT_UNIT {SIDE} {TYPE} {X} {Y} }
+    {GUARDIAN}
+    [+unit]
+        [+modifications]
             {MOVEMENT_RESTRICTION}
         [/modifications]
         upkeep=loyal
@@ -266,29 +252,17 @@
 #enddef
 
 #define ANL_PLACE_WOUNDED_UNIT SIDE TYPE X Y HITPOINTS_AMOUNT
-    [unit]
-        side={SIDE}
-        type={TYPE}
-        generate_name=yes
+    {NOTRAIT_UNIT {SIDE} {TYPE} {X} {Y} }
+    {GUARDIAN}
+    [+unit]
         hitpoints={HITPOINTS_AMOUNT}
-        ai_special=guardian
-        random_traits=no
-        x={X}
-        y={Y}
-        upkeep=loyal
     [/unit]
 #enddef
 
 #define ANL_PLACE_TRAPPED_UNIT SIDE TYPE X Y
-    [unit]
-        side={SIDE}
-        type={TYPE}
-        generate_name=yes
-        ai_special=guardian
-        random_traits=no
+    {NOTRAIT_UNIT {SIDE} {TYPE} {X} {Y} }
+    [+unit]
         overlays=projectiles/web.png
-        x={X}
-        y={Y}
     [/unit]
 #enddef
 
